[BeOS]Bug 335076. Fixing rendering of point-sized test. p=sergei_d, r=thesuckiestemail@yahoo.se. BeOS-only